@@ -10,7 +10,7 @@ jobs:
         shell: bash -l {0}
     strategy:
       matrix:
-        python-version: [ "3.7", "3.8", "3.9", "3.10" ]
+        python-version: [ "3.8", "3.9", "3.10", "3.11", "3.12" ]
 
     steps:
       -
@@ -23,7 +23,7 @@ jobs:
           python-version: ${{matrix.python-version}}
       -
         name: Install package + remaining PyPI dependencies
-        run: pip install .
+        run: python -m pip install .
       -
         name: Test run ScriptEngine
         run: |
