@@ -16,7 +16,7 @@ jobs:
         name: Setup Python
         uses: actions/setup-python@v3
         with:
-          python-version: 3.9
+          python-version: 3.10
       -
         name: Install pypa/build
         run: |
@@ -37,7 +37,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [ "3.7", "3.8", "3.9", "3.10" ]
+        python-version: [ "3.8", "3.9", "3.10", "3.11", "3.12" ]
     steps:
       -
         name: Setup Python
@@ -48,7 +48,7 @@ jobs:
         name: Install dependencies and scriptengine-tasks-ecearth
         run: |
           python -m pip install --upgrade pip
-          python -m pip install scriptengine-tasks-hpc
+          python -m pip install "scriptengine-tasks-hpc>=1.0.0rc1"
       -
         name: Test run ScriptEngine
         run: |
