@@ -5,6 +5,7 @@ Features
 --------
 - #18: Adapt to new Context class in ScriptEngine
        (needs ScriptEngine 1.0.0rc1 or later)
+- #21: Update Python version requirements
 
 
 ScriptEngine-HPC 0.6.1
